- FIX: login page horizontal scrollable removed

--- a/tasmoadmin/resources/scss/_vars.scss
+++ b/tasmoadmin/resources/scss/_vars.scss
@@ -101,11 +101,11 @@ $whiteNightMode : rgba(255, 255, 255, 0.5); //$white_50
   }
 
   .col, .card {
-    border : 1px solid red !important;
+    //border : 1px solid red !important;
   }
 
   .row, .form-row {
-    border : 1px solid blue !important;
+    //border : 1px solid blue !important;
   }
 }
 
